(menhir (modules parser))

(ocamllex (modules lexer))

(library (name wreckparse) (modules lexer parser ast parselib))

(library
 (name jack)
 (libraries ctypes.foreign)
 (modules jack_callback)
 (c_library_flags (-ljack))
 (c_names jack_callback))

(executable
 (name wreck)	
 (libraries
   threads
   wreckparse
   jack
   ctypes.foreign
   llvm
   llvm.analysis
   llvm.executionengine
   llvm.target
   llvm.scalar_opts)
 (modules wreck codegen))
